Changing the whole view of the site, adding the fitcher to choose a sub-category and changing the UI of admin pannel _after adding changed giles to local Repo